# BudgetButlerWeb

./: .coveralls.yml  .gitignore  .gitmodules  .pylintrc  .travis.yml  .version.check.json  Dockerfile.api  Dockerfile.cron  Dockerfile.desktopapp  Dockerfile.fpm  Dockerfile.offline  Dockerfile.static  Dockerfile.test  PKGBUILD  README.md  build-appimage.sh  build.sh  config  create_desktop_shortcut.sh  create_shortcut.sh  de.sebastianruziczka.budgetbutlerweb.metainfo.xml  integration-requirements.txt  pyproject.toml  requirements.txt  sonar-project.properties  start_butler_offline.sh  start_butler_offline_debug.sh
butler_offline/: .gitignore  Cargo.toml  __init__.py  requirements.txt  start_as_flask.py
butler_offline/__pycache__/: .gitignore
butler_offline/core/: DBManager.py  DatabaseModule.py  FileSystem.py  ReportGenerator.py  configuration_provider.py  database_manager.py  file_system.py  frequency.py  report.py  time.py
butler_offline/core/__pycache__/: .gitignore
butler_offline/core/database/: .gitignore  DatabaseObject.py  Dauerauftraege.py  Einzelbuchungen.py  Gemeinsamebuchungen.py  Selector.py  StatedObject.py  __init__.py  database_object.py  dauerauftraege.py  einzelbuchungen.py  gemeinsamebuchungen.py  selector.py  stated_object.py
butler_offline/core/export/: JSONReport.py  JSONToTextMapper.py  StringWriter.py  TextReport.py  json_report.py  json_to_text_mapper.py  string_writer.py  text_report.py
butler_offline/core/shares/: __init__.py  sectors.py  shares_manager.py
butler_offline/online_services/butler_online/: einzelbuchungen.py  gemeinsame_buchungen.py  online_routes.py  session.py  settings.py
butler_offline/src/: main.rs
butler_offline/src/budgetbutler/: chart.rs  config.rs  mod.rs  table.rs
butler_offline/src/io/: cargo.rs  env.rs  mod.rs  time.rs
butler_offline/src/model/: configuration.rs  indiziert.rs  local.rs  mod.rs  shares.rs  user_data.rs
butler_offline/static/: theme.css
butler_offline/static/theme/: butler.js  butler_box.js  butler_menu.js  theme.css
butler_offline/templates/: dashboard.html  error_keine_aktion_gefunden.html  error_optimistic_locking.html  index.html  success_zurueck_zu.html  theme.css
butler_offline/templates/einzelbuchungen/: add_ausgabe.html  add_dauerauftrag.html  add_einnahme.html  split_dauerauftrag.html  uebersicht_dauerauftraege.html  uebersicht_einzelbuchungen.html  uebersicht_jahr.html  uebersicht_monat.html
butler_offline/templates/gemeinsame_buchungen/: addgemeinsam.html  gemeinsamabrechnen.html  present_abrechnung.html  uebersicht_abrechnungen.html  uebersicht_gemeinsam.html
butler_offline/templates/shared/: import_mapping.html
butler_offline/templates/sparen/: add_depotauszug.html  add_depotwert.html  add_konto.html  add_order.html  add_orderdauerauftrag.html  add_sparbuchung.html  (+13 more)
butler_offline/test/: Database_Test_User.csv  FileSystemStub.py  RequestStubs.py  RequesterStub.py  database_util.py  requester_stub.py  test.py
butler_offline/viewcore/: base_html.py  colors.py  configuration_provider.py  converter.py  menu.py  request_handler.py  requester.py  routes.py  viewcore.py
butler_offline/views/: addausgabe.py  adddauerauftrag.py  addeinnahme.py  addgemeinsam.py  configuration.py  dashboard.py  gemeinsam_abrechnen.py  import_data.py  testmode_switch.py  uebersicht_abrechnungen.py  uebersicht_dauerauftrag.py  uebersicht_einzelbuchungen.py  uebersicht_gemeinsam.py  uebersicht_jahr.py  uebersicht_monat.py
butler_online_api/: .env  .gitignore  .start.sh  Cargo.toml  README.md  cron.sh  docker-compose.yml
butler_online_api/api/: adduser.php  changepassword.php  composer.json  db.ini  deletegemeinsam.php  deleteitems.php  einzelbuchung.php  gemeinsamebuchung.php  kategorie.php  login.php  model.php  partner.php  setkategorien.php
butler_online_api/install_sqls/: Readme.md
butler_online_api/src/: cron.rs  database.rs  database_migrations.rs  einzelbuchungen.rs  gemeinsame_dauerauftraege.rs  health.rs  main.rs  openidconnect_configuration.rs  result_dto.rs  schema.rs
(+1702 files in other folders)
