[package]
name = "budgetbutlerweboffline"
version = "4.3.7"
edition = "2021"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
askama = "0.14.0"
chrono = "0.4.42"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
serde_json = "1.0.145"
reqwest = { version = "0.12.26", features = ["json"] }
# Cli Parser
clap = { version = "4.5.53", features = ["derive"] }

[features]
default = []
integration_test = []
