[package]
name = "budgetbutlerweboffline"
version = "4.3.10"
edition = "2021"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
askama = "0.15.4"
chrono = "0.4.43"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
# Cli Parser
clap = { version = "4.5.57", features = ["derive"] }

[features]
default = []
integration_test = []
