[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "cron"
path = "src/cron.rs"

[package]
name = "budgetbutlerweb-companion-backend"
version = "4.3.2"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2" }
diesel = { version = "2.2.9", features = ["mysql", "r2d2", "numeric", "time"] }
diesel_migrations = "2.2.0"
dotenvy = { version = "0.15.7" }
bigdecimal = { version = "0.4.8", features = ["serde"] }
time = { version = "0.3.41", features = ["serde"]}
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
openid = "0.16.1"
url = "2.5.4"
actix-identity = "0.8.0"
actix-session = { version="0.10.1", features = ["cookie-session"] }
chrono = "0.4.40"
