[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "cron"
path = "src/cron.rs"

[package]
name = "budgetbutlerweb-companion-backend"
version = "4.3.7"
edition = "2021"

[dependencies]
actix-web = { version = "4.12.1" }
diesel = { version = "2.3.4", features = ["mysql", "r2d2", "numeric", "time"] }
diesel_migrations = "2.3.1"
dotenvy = { version = "0.15.7" }
bigdecimal = { version = "0.4.9", features = ["serde"] }
time = { version = "0.3.44", features = ["serde"]}
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
openid = "0.18.3"
url = "2.5.7"
actix-identity = "0.9.0"
actix-session = { version= "0.11.0", features = ["cookie-session"] }
chrono = "0.4.42"
